<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/campus_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/bottom_navigation_height"
    tools:context=".bottom.navigation.bar.fragment.campus.CampusFragment">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/ultraLightGray"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <ImageView
                android:id="@+id/action_bar_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="17dp"
                android:contentDescription="@string/content_description_logo" />

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/incidences_layout"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginTop="2dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/claims_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/incidents"
                android:textColor="@color/tw__composer_black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/incidences_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/claims_title"
                android:layout_marginBottom="5dp" />
        </RelativeLayout>


    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/events_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/incidences_layout"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/events_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:text="@string/next_events_label"
                android:textColor="@color/tw__composer_black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar_icon"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignBottom="@id/events_title"
                android:layout_toStartOf="@id/new_event"
                android:src="@android:drawable/ic_menu_my_calendar"
                android:contentDescription="@string/content_description_new_event_icon" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/events_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/events_title"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/new_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/events_title"
                android:layout_alignParentEnd="true"
                android:text="@string/new_event_button"
                android:textSize="12sp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/content_menu" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>